fixed bug alignment of It-picture for L1, L2

--- a/components/learnThai/learnThai.css
+++ b/components/learnThai/learnThai.css
@@ -1,11 +1,6 @@
 .lt-game-background {
-  position: relative;
   width: 80%;
-  height: 100%;
   margin: 2rem auto;
-  padding-top: 3%;
-  padding-bottom: 3%;
-  background-color: white;
 }
 
 div[ng-view].ng-scope {
